--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "babel ./js/app.js -o ./dist/app.js"
+    "dev": "webpack-cli --mode=\"development\" --devtool=\"inline-source-map\" --watch",
+    "build": "webpack-cli --mode=\"production\" --devtool=\"source-map\""
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,16 @@
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4"
+    "@babel/preset-env": "^7.8.4",
+    "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-prettier": "^3.1.2",
+    "html-webpack-plugin": "^4.2.0",
+    "path": "^0.12.7",
+    "prettier": "^2.0.4",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11"
   }
 }
